* Fix #365 the checkmark is shifted left in the box and repeats around the edges

--- a/styles/_forms.scss
+++ b/styles/_forms.scss
@@ -256,9 +256,11 @@
   @apply block;
 
   .gc-input-checkbox__input {
+    background-repeat: round;
     @apply md:mr-4 mr-6 absolute w-10 h-10 bg-white-default border-2 border-transparent;
     & + .gc-checkbox-label {
       @apply relative cursor-pointer p-0;
+
     }
 
     &:focus {
@@ -283,9 +285,10 @@
 
     // Checkmark. Could be replaced with an image
     &:checked + .gc-checkbox-label:after {
+      background-repeat: no-repeat;
       content: "";
       background-image: url("../public/img/checkmark.svg");
-      @apply absolute w-6 h-6 left-2;
+      @apply absolute w-6 h-6 left-2;      
     }
 
     &:focus + .gc-checkbox-label:after {
